# python-lstring

./: .gitignore  AI_CONTEXT.md  README.md  buffer.hxx  join_buffer.hxx  lstring.cxx  lstring.hxx  lstring.py  mul_buffer.hxx  pyproject.toml  setup.py  slice_buffer.hxx  test_match_factory.py  tox.ini
benchmarks/: bench_find.py  bench_findcs.py  benchmark.py
lstring/: __init__.py  format.py  lstring.py  re.py
src/: _lstring.hxx  buffer.cxx  buffer.hxx  charset.hxx  join_buffer.hxx  lstring.cxx  lstring.hxx  lstring_concat.cxx  lstring_methods.cxx  lstring_module.cxx  lstring_re.hxx  lstring_re_icu_traits.hxx  lstring_re_iterator.hxx  lstring_re_match.cxx  lstring_re_match.hxx  lstring_re_module.cxx  lstring_re_pattern.cxx  lstring_re_pattern.hxx  lstring_re_python_traits.hxx  lstring_re_regex.hxx  lstring_utils.cxx  lstring_utils.hxx  mul_buffer.hxx  slice_buffer.hxx  str_buffer.hxx  tptr.hxx
tests/: __init__.py  benchmark.py  test_findclass.py  test_findcs_invert.py  test_lstr_balanced_concat_repr.py  test_lstr_case.py  test_lstr_charclass.py  test_lstr_collapse.py  test_lstr_compare.py  test_lstr_count.py  test_lstr_delegates.py  test_lstr_dict.py  test_lstr_expandtabs.py  test_lstr_fformat.py  test_lstr_find.py  test_lstr_findc.py  test_lstr_findcr.py  test_lstr_findcs.py  test_lstr_findcs_invert.py  test_lstr_format.py  test_lstr_index.py  test_lstr_isascii.py  test_lstr_istitle.py  test_lstr_istitle_mulbuf.py  test_lstr_istitle_regression.py  test_lstr_iterator.py  test_lstr_join.py  test_lstr_justify_strip.py  test_lstr_mixed_concat.py  test_lstr_noop_ops.py  (+22 more)
(+3 files in other folders)
